.. Author notes: this file is formatted with restructured text
(http://docutils.sourceforge.net/docs/user/rst/quickstart.html).
The changelog style is adapted from Apache Lucene.

Note that ``RB_ID=#`` correspond to associated messages in commits.

Next Version

Bug Fixes:

  * util-core: Fix nested functions `AsyncStream.++` to avoid stack overflow. ``RB_ID=804408`` 

Deprecations:

  * util-core: `Future.rawException` is deprecated in favor of `Future.exception`.
    ``RB_ID=798223``

6.32.0  2016-02-03

New Features:

  * util-core: Add `Future.traverseSequentially`. Take a sequence and sequentially apply a function
    A => Future[B] to each item. ``RB_ID=785091``

6.31.0  2016-02-02

NOT RELEASED

6.30.0  2015-12-03

New Features:

  * util-core: Introduce an `AsyncMeter` for asynchronously rate limiting to a fixed rate over time.
    It can be used for smoothing out bursty traffic, or for slowing down access to a
    resource. ``RB_ID=756333``

  * util-core: Introduce a `TokenBucket` for helping to control the relative rates of two processes,
    or for smoothing out the rate of a single process. ``RB_ID=756333``

API Changes:

  * util-core: `Timer` now has final implementations for `schedule` which delegate
    to new protected `scheduleOnce` and `schedulePeriodically` methods. This is
    done to ensure that `Locals` are captured when the task is scheduled and
    then used when the task is run. Existing `Timer` implementations should rename
    their existing `schedule` methods to work with the new interface. ``RB_ID=755387``

  * util-core: Remove deprecated `FuturePool.defaultPool`, callers should
    use `FuturePool.unboundedPool` instead. ``RB_ID=757499``

  * util-stats: Remove deprecated methods on `com.twitter.finagle.stats.StatsReceiver`.
    ``RB_ID=757414``

  * util-core: `AsyncStream` graduates out of `com.twitter.concurrent.exp` into
    `com.twitter.concurrent`. Backwards compatibility aliases remain for Scala